仿京东首页公共部分

--- a/HtmlTest/999.练习-仿京东首页/css/base.css
+++ b/HtmlTest/999.练习-仿京东首页/css/base.css
@@ -143,13 +143,13 @@ s, i, em {
 /*从◇特殊符号中截取一半做三角形符号,采用子绝父相定位
 此例为子绝 子绝 祖父dt相。dt为存放送至北京及三角号的盒子
 先将大盒子i定好位置，再调整放有特殊符号的小盒子s*/
-.dt,
-.shortcut .fore {/*为fore提高权重，否则padding沿用li的，左右宽度不够*/
+.shortcut .dt,
+.shortcut .fore { /*为fore提高权重，否则padding沿用li的，左右宽度不够*/
     position: relative;
     padding: 0 20px 0 10px;
 }
 
-.dt i,
+.shortcut .dt i,
 .fore i {
     /*特殊符号字体加粗400,特殊符号15像素大小行高15，宋体
     font-weight:bold;等同与font-weight:700px;*/
@@ -166,7 +166,7 @@ s, i, em {
     overflow: hidden;
 }
 
-.dt s,
+.shortcut .dt s,
 .fore s {
     /*将s容器内的特殊符号上移，截取出下半三角*/
     position: absolute;
@@ -192,47 +192,54 @@ s, i, em {
     /*层叠取消线上的padding,因为背景色也会显示在padding上，会导致线条变粗*/
     padding: 0;
 }
+
 /*手机京东小图标*/
-.shortcut .tel-jd{
+.shortcut .tel-jd {
     padding: 0 20px 0 25px;
 }
-.tel{
+
+.tel {
     position: absolute;
-    left:5px;
-    top:5px;
-    width:15px;
+    left: 5px;
+    top: 5px;
+    width: 15px;
     height: 20px;
-    background: url("../images/sprite.png") no-repeat ;
+    background: url("../images/sprite.png") no-repeat;
 }
+
 /*--------头部导航结束---------*/
 
 /*--------顶部banner开始---------*/
-.topbanner{
+.topbanner {
     background-color: #8A25C6;
 }
-.bannerparent{
+
+.bannerparent {
     /*子绝父相*/
     position: relative;
 }
-.close-banner{
+
+.close-banner {
     /*将半透明关闭按钮定位在右上角*/
     position: absolute;
     right: 0;
     top: 5px;
     /*宽高等同于图片宽高，超链接绝对定位后可设置宽高*/
-    width:19px;
-    height:19px;
+    width: 19px;
+    height: 19px;
     background: url("../images/close.png") no-repeat;
 }
+
 /*鼠标停留在关闭按钮上,颜色变深*/
-.close-banner:hover{
+.close-banner:hover {
     /*背景图靠底对齐，0可省略*/
     background-position: 0 bottom;
 }
+
 /*--------头部导航结束---------*/
 
 /*logo、搜索框与购物车部分*/
-.logo{
+.logo {
     /*先在FW量logo区域整体宽高布局好后，量logo的上下间距时增加padding之后要height要减去增加的padding*/
     width: 360px;
     /*height: 100px;*/
@@ -243,36 +250,40 @@ s, i, em {
     background: url("../images/logo.png") no-repeat 0 25px;
     position: relative;
 }
-.jd-a{
+
+.jd-a {
     display: block;
-    width:270px;
-    height:60px;
+    width: 270px;
+    height: 60px;
     text-indent: -2000em;
 }
+
 /*双11动态图*/
-.db11{
+.db11 {
     position: absolute;
     width: 180px;
     height: 80px;
     left: 168px;
     top: 10px;
 }
+
 /*搜索框*/
-.search{
+.search {
     width: 538px;
     /*height: 100px;*/
-    height:35px;
+    height: 35px;
     /*background-color: purple;*/
     float: left;
     margin-top: 25px;
 }
+
 /*搜索输入框*/
-.search input{
+.search input {
     /*给了左padding值，盒子又有宽，width要减去padding值454-4=450*/
     /*width: 454px;*/
     width: 450px;
     height: 32px;
-    border:2px solid #B61D1D;
+    border: 2px solid #B61D1D;
     /*输入文字距离输入框左边框4像素*/
     padding-left: 4px;
     color: #666;
@@ -282,51 +293,56 @@ s, i, em {
     font: 14px/32px "microsoft yahei";
     float: left;
 }
+
 /*搜索按钮*/
-.search button{
+.search button {
     width: 80px;
     height: 36px;
     background-color: #B61D1D;
     float: left;
-    font:16px/36px "microsoft yahei";
+    font: 16px/36px "microsoft yahei";
     color: #FFFFFF;
-    cursor:pointer;
+    cursor: pointer;
 }
-.cart{
+
+.cart {
     /*宽度对应减去padding-left*/
     /*width: 139px;*/
     width: 96px;
     /*我的购物车文字并非左右居中，使用padding*/
-    padding-left:43px;
-    height:34px;
+    padding-left: 43px;
+    height: 34px;
     line-height: 34px;
     float: right;
-    margin:25px 65px 0 0;
+    margin: 25px 65px 0 0;
     /*background-color: skyblue;*/
     border: 1px solid #DFDFDF;
     position: relative;
 }
+
 /*购物车图标*/
-.cart .icon1{
+.cart .icon1 {
     position: absolute;
-    top:10px;
-    left:20px;
+    top: 10px;
+    left: 20px;
     width: 16px;
     height: 13px;
     /*从精灵图切取*/
-    background:url("../images/sprite.png") no-repeat  -1px -59px;
+    background: url("../images/sprite.png") no-repeat -1px -59px;
 }
+
 /*右箭头*/
-.cart .icon2{
-    font:400 13px/13px simsum;
+.cart .icon2 {
+    font: 400 13px/13px simsum;
     position: absolute;
-    top:10px;
+    top: 10px;
     /*注意这里使用right*/
     right: 10px;
 
 }
+
 /*购物车数量显示图标*/
-.cart .icon3{
+.cart .icon3 {
     position: absolute;
     width: 16px;
     height: 14px;
@@ -336,27 +352,115 @@ s, i, em {
     line-height: 12px;
     /*居中*/
     text-align: center;
-    color:#FFFFFF;
+    color: #FFFFFF;
     /*让图标飘出购物车上方一点*/
-    top:-4px;
+    top: -4px;
     /*圆角矩形CSS3样式*/
     border-radius: 7px 7px 7px 0;
 
 }
+
 /*热搜关键词*/
-.hotwords{
-    width:500px;
-    padding:7px 0;
+.hotwords {
+    width: 500px;
+    padding: 7px 0;
     /*background: pink;*/
     /*要么都浮动，要么都不浮动。兄弟已经有浮动了*/
     float: left;
 }
-.hotwords a{
+
+.hotwords a {
     margin-right: 6px;
 }
+
 /*logo、搜索框与购物车部分结束*/
 
 /*通用底部样式*/
+/*宣传口号*/
+.slogen {
+    height: 54px;
+    padding: 20px 0;
+    background-color: #f5f5f5;
+    position: relative;
+    margin-bottom: 15px;
+}
 
+/*下面四张图片是通过定位放置的，以绝对定位到*/
+.slogen .item {
+    width: 302px;
+    position: absolute;
+    top: 20px;
+    left: 50%;
+}
 
+.slogen .item.slogen1 {
+    margin-left: -604px;
+}
 
+.slogen .item.slogen2 {
+    margin-left: -302px;
+}
+
+.slogen .item.slogen3 {
+    margin-left: 2px;
+}
+
+.slogen .item.slogen4 {
+    margin-left: 302px;
+}
+
+/*服务信息*/
+.service dl {
+    /*使用宽度剩余法，让其直接占据设计图宽度，省去了上下padding和左右的margin值设置*/
+    width: 198px;
+    float: left;
+}
+
+.service dt, .coverage .dt {
+    font-size: 16px;
+    font-family: "微软雅黑";
+    /*高度剩余法*/
+    height: 28px;
+    padding-top: 10px;
+}
+
+.service dd {
+    height: 20px;
+}
+
+/*自营覆盖区*/
+.coverage {
+    float: left;
+    width: 210px;
+    height: 165px;
+    background: url("../images/china.png") no-repeat left bottom;
+}
+
+.coverage p {
+    line-height: 18px;
+}
+.coverage .dd{
+    margin-top: 10px;
+}
+/*查看详情文字右对齐*/
+.coverage p.detail {
+    text-align: right;
+    margin-top: 5px;
+}
+/*版权信息*/
+.jd-footer .againw{
+    border-top: 1px solid #E5E5E5;
+    padding: 23px 0 30px 0;
+    margin-top: 30px;
+    text-align: center;
+}
+.againw .links a{
+    padding:0 6px;
+}
+.againw .copyright{
+    margin-bottom: 10px;
+    line-height:20px;
+}
+.againw .message a{
+    margin-right: 15px;
+}
